# vizop

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
examples/: gallery.py
src/vizop/: __init__.py
src/vizop/charts/: __init__.py  bar.py  bump.py  line.py  parliament.py  raincloud.py  scatter.py  slope.py  waffle.py
src/vizop/core/: annotations.py  chart.py  config.py  fonts.py  formatting.py  icons.py  palettes.py  theme.py
tests/: conftest.py  test_bar.py  test_bump.py  test_chart.py  test_config.py  test_fonts.py  test_formatting.py  test_line.py  test_palettes.py  test_parliament.py  test_raincloud.py  test_scatter.py  test_slope.py  test_theme.py  test_waffle.py
