[project]
name = "vizop"
version = "0.1.0"
description = "Opinionated, publication-quality data visualization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100


[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/vizop"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
