[project]
name = "vizop"
version = "0.1.1"
description = "Opinionated Python data visualization. Publication-quality charts with minimal config."
readme = "README.md"
authors = [
    { name = "Anthony Berghammer", email = "aberghammer.analytics@gmail.com" }
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["visualization", "charts", "matplotlib", "data-viz", "publication-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib",
    "pydantic",
    "numpy",
    "pandas",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/aberghammer-analytics/vizop"
Source = "https://github.com/aberghammer-analytics/vizop"
Issues = "https://github.com/aberghammer-analytics/vizop/issues"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
